syntax = "proto3";

package protocol;

option java_package = "com.bkhech.home.practice.rpc.protobuf";
option java_outer_classname = "RequestProto";

message ReqProtocol {
   string reqMsg = 1;
   int64 requestId = 2;
   int32 type = 3;
}

